# llm-zoomcamp-code-vector_search

./: 00_pipeline.ipynb  README.md  demo.ipynb  embeddings.ipynb  ingest.py  main.py  minsearch-vector.ipynb  pgvector-vector.ipynb  pyproject.toml  rag-vector.ipynb  rag_helper.py  sqlitesearch-vector.ipynb
orchestration/: docker-compose.yml
orchestration/flows/: 10_scheduled_knowledge_refresh.md  10_scheduled_knowledge_refresh.yaml  11_rag_with_groq.md  11_rag_with_groq.yaml  1_chat_without_rag.md  2_chat_with_rag.md  3_rag_with_websearch.md  4_simple_agent.md  5_web_research_agent.md  6_multi_agent_research.md  7_conversational_agent_with_memory.md  7_conversational_agent_with_memory.yaml  8_faq_rag_pipeline.md  8_faq_rag_pipeline.yaml  9_llm_evaluation.md  9_llm_evaluation.yaml
orchestration/lessons/: 10-memory-and-state.md  11-evaluation.md  12-advanced-patterns.md
