[project]
name = "llm-zoomcamp-code-vector-search"
version = "0.1.0"
description = "Small playground for FAQ search with keyword and vector retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.3.0",
]
